🌹Fixed Some old redundant code and make more readable

--- a/src/assets/scss/components/_bookingsSummary.scss
+++ b/src/assets/scss/components/_bookingsSummary.scss
@@ -47,9 +47,9 @@
     }
   }
   .progress-circle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     .outer-progress-circle {
       width: 40px;
       height: 40px;
